# digilab-harness

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chip_request.md  feature_request.md
.github/workflows/: ci.yml
course_archive/: README.md  harness附录.md  run_all.ps1  run_all.py  更新工单.md  模拟电路程序harness.md
course_archive/实验0_器件扩展/: 实验0_日志_成功.md
course_archive/实验1_1/: actual_truth_table.csv  circuit.txt  netlist.json  spec.json  实验1_1_日志_成功.md
course_archive/实验1_2/: circuit.txt  netlist.json  spec.json  truth_table.csv  实验1_2_日志_成功.md
course_archive/实验2_1/: actual_truth_table.csv  circuit.txt  netlist.json  spec.json  verify_report.json  实验2_1_日志_成功.md  实验2_1_物理接线指南.md
course_archive/实验2_2/: actual_truth_table.csv  circuit.txt  netlist.json  spec.json  实验2_2_日志_成功.md  实验2_2_物理接线指南.md
course_archive/实验一/（1）/: 1.md
course_archive/实验一/（2）/: 2.md
course_archive/实验二/: 1：血型配对（用 74153 数据选择器实现）.md  2：发电机控制器（用 74138 译码器实现）.md
course_archive/真值表与逻辑表达式/: README.md  实验1_1_真值表.md  实验1_1_表达式.md  实验1_2_真值表.md  实验1_2_表达式.md  实验2_1_真值表.md  实验2_1_表达式.md  实验2_2_真值表.md  实验2_2_表达式.md  示例_74138_真值表.md  示例_74138_表达式.md  示例_74153_真值表.md  示例_74153_表达式.md  示例_混用_真值表.md  示例_混用_表达式.md  示例_真值表.md  示例_表达式.md
course_archive/示例_74138/: actual_truth_table.csv  circuit.txt  netlist.json
course_archive/示例_74153/: actual_truth_table.csv  circuit.txt  netlist.json
course_archive/示例_混用/: actual_truth_table.csv  verify_report.json
course_archive/重塑日志/: PhaseA_审查.md  PhaseB_审查.md  PhaseC_审查.md  PhaseD_审查.md
docs/: architecture.md  chip_extension.md  dsl_reference.md  index.md  physical_wiring.md
docs/zh/: index.md
examples/: README.md
examples/01_basic_nand2/: expr.md  truth_table.md
examples/01_basic_nand_7400/: expr.md
examples/02_bcd_judge_7400_7420/: expr.md  truth_table.md
examples/03_blood_match_74151/: expr.md  truth_table.md
examples/04_generator_ctrl_74138/: expr.md  truth_table.md
src/digilab/: __init__.py  cli.py  synthesizer.py  verifier.py
src/digilab/chips/: CHANGELOG.md  __init__.py  chip_7400.py  chip_74138.py  chip_74151.py  chip_74153.py  chip_7420.py  registry.py
src/digilab/common/: ast_nodes.py  netlist.py  parser.py  tt_io.py
tests/: test_cli.py  test_examples_regression.py  test_registry.py  test_smoke.py
示例_混用/: circuit.txt  netlist.json
